--- a/core/templates/core/tenx/tenxpool_detail.html
+++ b/core/templates/core/tenx/tenxpool_detail.html
@@ -9,10 +9,12 @@
     <table class="table-condensed">
             <br>
             {% for field,value in pool.get_field_values.items %}
-            <tr>
+             {% if field != "GSC Pool Name" %}
+             <tr>
                 <th id="thid">{{field}}:</th>
                 <td id="tdid" class="notes">{{value}}</td>
-            </tr>
+             </tr>
+             {% endif %}
             {% endfor %}
     </table>
     <br>
@@ -39,7 +41,7 @@
                     {% for library in pool.libraries.all %}
                         <tr>
                             <td><a href="{{ library.get_absolute_url }}">{{ library.id }}</a></td>
-                            <td><a href="{{ library.sample_id.get_absolute_url }}">{{ library.sample.sample_id }}</a></td>
+                            <td><a href="{{ library.sample.get_absolute_url }}">{{ library.sample.sample_id }}</a></td>
                             <td><a href="https://www.bcgsc.ca/jira/browse/{{ library.jira_ticket }}">{{ library.jira_ticket }}</a></td>
                             <td>{{ library.description }}</td>
                         </tr>
