--- a/core/templates/core/tenx/tenxpool_detail.html
+++ b/core/templates/core/tenx/tenxpool_detail.html
@@ -77,7 +77,7 @@
                             <td><a href="{{ sequencing.get_absolute_url }}">{{ sequencing.id }}</a></td>
                             <td>{{ sequencing.sequencing_center }}</td>
                             <td>{{ sequencing.submission_date }}</td>
-                            <td><a href="{{ sequencing.library.get_absolute_url }}">{{ sequencing.library }}</td>
+                            <td><a href="{{ sequencing.library.get_absolute_url }}">{{ sequencing.library }}</a></td>
                         </tr>
                     {% endfor %}
                 </tbody>
