--- a/core/templates/core/library_detail.html
+++ b/core/templates/core/library_detail.html
@@ -44,23 +44,45 @@
                 <th id="thid"> Number of plates:</th>
                 <td id="tdid" class="notes">{{ library.plate_set.count }}</td>
             {% endif %}
+            {% if library_type == 'tenx' %}
+                <th id="thid">Tenx Pool:</th>
+                {% if library.tenxpool_set.all %}
+                <td id="tdid">
+                    {% for pool in  library.tenxpool_set.all %}
+                    <a href="{{ pool.get_absolute_url }}">{{pool}}</a>
+                    {% endfor %}
+                </td>
+                {% else %}
+                <td>None</td>
+                {% endif %}
+            {% endif %}
         </tr>
         {% for field, value in library_dict.items %}
-            <tr>
-                <th id="thid">{{ field }}:</th>
+        <tr>
+            <th id="thid">{{ field }}:</th>
 
-                {% if field == "Jira ticket" %}
-                    <td id="tdid"><a href="https://www.bcgsc.ca/jira/browse/{{ value }}">{{ value }}</a></td>
-                {% elif field == "Google Sheet Link" %}
-                    {% if value %}
-                    <td id="tdid"><a href="{{value}}">Link</a></td>
-                    {% else %}
-                    <td>None</td>
-                    {% endif %}
+            {% if field == "Jira ticket" %}
+                {% if value %}
+                <td id="tdid"><a href="https://www.bcgsc.ca/jira/browse/{{ value }}">{{ value }}</a></td>
                 {% else %}
-                    <td id="tdid" class="notes">{{ value }}</td>
+                <td>None</td>
                 {% endif %}
-            </tr>
+            {% elif field == "Google Sheet Link" %}
+                {% if value %}
+                <td id="tdid"><a href="{{value}}">Link</a></td>
+                {% else %}
+                <td>None</td>
+                {% endif %}
+            {% elif field == "Chip" %}
+                {% if value %}
+                <td id="tdid"><a href="{{library.chips.get_absolute_url}}">{{library.chips}}</a></td>
+                {% else %}
+                <td>None</td>
+                {% endif %}
+            {% else %}
+                <td id="tdid" class="notes">{{ value }}</td>
+            {% endif %}
+        </tr>
         {% endfor %}
         <tr>
             <th id="thid">Project:</th>
@@ -345,7 +367,7 @@
     </div>
 {% endif %}
 <!-- end of Sublibrary Information -->
-
+{% if library_type == 'dlp' or library_type == 'pbal' %}
 <!-- Sequencing Information -->
 <div class="container detail-bordered-container">
     <h4>Sequencing Information</h4>
@@ -402,31 +424,6 @@
                 </tbody>
             </table>
         </div>
-    {% elif library.tenxsequencing_set.all %}
-        <div class="table-responsive">
-            <table id="sequencing-datatable" class="table-striped table-bordered">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Sample ID</th>
-                        <th>Adapter</th>
-                        <th>Sequencing instrument</th>
-                        <th>Submission date</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for sequencing in library.tenxsequencing_set.all %}
-                        <tr>
-                           <td><a href="{{ sequencing.get_absolute_url }}">{{ sequencing.id }}</a></td>
-                            <td><a href="{{ sequencing.library.sample.get_absolute_url }}">{{ sequencing.library.sample.sample_id }}</a></td>
-                            <td>{{ sequencing.adapter }}</td>
-                            <td>{{ sequencing.get_sequencing_instrument_display }}</td>
-                            <td>{{ sequencing.submission_date }}</td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
     {% else %}
         <h5><i class="text-warning">There is no sequencing information for this library!</i></h5>
     {% endif %}
@@ -434,7 +431,7 @@
     <a href="{% url library_type|add:':sequencing_create_from_library' from_library=library.pk %}"><i class="fa fa-plus" aria-hidden="true" style="color:green;"></i> Add Sequencing</a></p>
 </div>
 <!-- end of Sequencing Information -->
-
+{% endif %}
 <!-- Analysis Information -->
 {% if library_type == 'dlp' %}
     <div class="container detail-bordered-container">
