--- a/core/templates/core/library_update.html
+++ b/core/templates/core/library_update.html
@@ -19,18 +19,8 @@
                             </th>
                             <td>
                                 {{ field.errors }}
-                                {% if field.name == "projects" %}
-                                    <select class="selectpicker" id="projects" name="projects" multiple data-none-selected-text="--------">
-                                        {% for project in projects %}
-                                            {% if project in selected_projects %}
-                                                <option selected="{{ project }}" value={{ project.id }}>{{ project }}</option>
-                                            {% else %}
-                                                <option value={{ project.id }}>{{ project }}</option>
-                                            {% endif %}
-                                        {% endfor %}
 
-                                    </select>
-                                {% elif field.name == "relates_to_dlp" %}
+                                {% if field.name == "relates_to_dlp" %}
                                     <select class="selectpicker" id="id_relates_to_dlp" data-live-search="True" name="relates_to_dlp" multiple data-none-selected-text="--------">
                                         {% for lib in related_dlp_libs %}
                                             {% if lib in selected_related_dlp_libs %}
