--- a/core/templates/core/analysis_detail.html
+++ b/core/templates/core/analysis_detail.html
@@ -1,3 +1,4 @@
+
 {% extends "base_view.html" %}
 {% load staticfiles %}
 
@@ -12,6 +13,15 @@
         <th> Library</th>
             <td><a href="{{library.get_absolute_url}}">{{ library }}</a></td>
         </tr>
+        <tr>
+        {% if tenx_pools %}
+        <tr>
+        <th>TenX Pool</th>
+            {% for tenx_pool in tenx_pools %}
+            <td><a href="{{tenx_pool.get_absolute_url}}">{{ tenx_pool }}</a></td>
+            {% endfor %}
+        </tr>
+        {% endif %}
         <tr>
         <th>Jira Ticket</th>
             <td><a href="https://www.bcgsc.ca/jira/browse/{{analysis.jira_ticket}}">{{analysis.jira_ticket}}</a></td>
