inventory removed, sample list filter added

--- a/core/templates/core/search/search_main.html
+++ b/core/templates/core/search/search_main.html
@@ -32,26 +32,6 @@
     <br>
 
 
-
+{% include 'core/scripts/pop_toggle.html' %}
 {% endblock %}
 
-{% block scripts %}
-<script>
-$(document).ready(function() {
-    $('[data-toggle*="toggle"]').popover({
-        html: true,
-        content: function() {
-        return $('#' + this.id + '-popover').html();
-        }
-    });
-});
-
-$('html').on('mouseup', function(e) {
-    if(!$(e.target).closest('.popover').length) {
-        $('.popover').each(function(){
-            $(this.previousSibling).popover('hide');
-        });
-    }
-});
-</script>
-{% endblock %}
