--- a/core/templates/core/sample_list.html
+++ b/core/templates/core/sample_list.html
@@ -10,8 +10,11 @@
     <a class="btn btn-primary btn-sm" style="float: right; margin-top: 5px;" href="{% url 'core:sample_create' %}">Add Sample</a>
 </div>
 <div class="container" style="background-color: #F5F5F5;">
+    <button class="btn btn-primary btn-sm" id="all_filter" style="margin-top : 10px;">All</button>
+    <button class="btn btn-default btn-sm" id="dlp_filter" style="margin-top : 10px; margin-left:3px; margin-right:3px;">DLP</button>
+    <button class="btn btn-default btn-sm" id="tenx_filter" style="margin-top : 10px;">10X</button>
     <div class="table-responsive">
-        <table id="datatable" class="table table-striped">
+        <table id="sample_datatable" class="table table-striped">
             <thead>
                 <tr>
                     <th>Primary Sample ID</th>
@@ -19,7 +22,9 @@
                     <th>Xenograft ID</th>
                     <th>Cell Line ID</th>
                     <th>Anonymous Patient ID</th>
-                    <th class="no-sort-col">Notes</th>
+                    <th>No. of DLP Sequencings</th>
+                    <th>No. of 10X Sequencings</th>
+                    <th>Notes</th>
                     <th class="no-sort-col"></th>
                 </tr>
             </thead>
@@ -33,6 +38,30 @@
                         <td>{{ sample.xenograft_id }}</td>
                         <td>{{ sample.cell_line_id }}</td>
                         <td>{{ sample.anonymous_patient_id }}</td>
+                        <td>
+                            <span id='{{sample}}dlp' class="badge"  title="DLP Libraries for {{sample}}" data-toggle="{{sample}}dlp-toggle" data-placement="bottom" style="padding: 0px 15px 0px 15px;">
+                                {{ sample.get_dlp_seq_count }}
+                            </span>
+                            <div id='{{sample}}dlp-popover' style="display: none;">
+                                <div style="max-height : 300px; overflow-y :auto;">
+                                     {% for library in sample.dlplibrary_set.all %}
+                                    <h6><a href="{{library.get_absolute_url}}">{{library}}</a> Sequencings: {{library.dlpsequencing_set.count}}</h6>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <span id='{{sample}}tenx' class="badge"  title="10x Libraries for {{sample}}" data-toggle="{{sample}}tenx-toggle" data-placement="bottom" style="padding: 0px 15px 0px 15px;">
+                                {{ sample.get_tenx_seq_count }}
+                            </span>
+                            <div id='{{sample}}tenx-popover' style="display: none;">
+                                <div style="max-height : 300px; overflow-y :auto;">
+                                     {% for library in sample.tenxlibrary_set.all %}
+                                    <h6><a href="{{library.get_absolute_url}}">{{library}}</a> Sequencings: {{library.tenxsequencing_set.count}}</h6>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </td>
                         <td>{{ sample.notes }}</td>
                         <td>
                             <div style="float: right; min-width: 69px">
@@ -47,5 +76,77 @@
         </table>
     </div>
 </div>
+{% include 'core/scripts/pop_toggle.html' %}
+{% endblock %}
 
+
+{% block datatables_script %}
+<script type="text/javascript">
+var primary_class = "btn btn-primary btn-sm";
+var default_class = "btn btn-default btn-sm";
+
+var all_button = document.getElementById("all_filter");
+var dlp_button = document.getElementById("dlp_filter");
+var tenx_button = document.getElementById("tenx_filter");
+
+var dlp = false;
+var tenx = false;
+
+$.fn.dataTable.ext.search.push(
+    function( settings, data, dataIndex ){
+        var dlp_seq = parseFloat( data[5] ) || 0;
+        var tenx_seq = parseFloat( data[6] ) || 0;
+        if(dlp && tenx){
+            if(dlp_seq == 0 || tenx_seq == 0)
+                return false;
+        }
+        else if(dlp){
+            if(dlp_seq == 0 || tenx_seq > 0)
+                return false;
+        }
+        else if(tenx){
+            if(tenx_seq == 0 || dlp_seq > 0)
+                return false;
+        }
+
+        return true;
+});
+
+$(document).ready(function() {
+    var table = $('#sample_datatable').DataTable(
+        {stateSave: true}
+    );
+    all_button.addEventListener("click", function() {myFunction("all", table)});
+    dlp_button.addEventListener("click", function() {myFunction("dlp", table)});
+    tenx_button.addEventListener("click", function() {myFunction("tenx", table)});
+
+    $('[data-toggle*="toggle"]').popover({
+        html: true,
+        content: function() {
+        return $('#' + this.id + '-popover').html();
+        }
+    });
+});
+
+function myFunction(type, table){
+    if(type == "tenx"){
+        tenx = !tenx;
+        table.draw();
+    };
+
+    if(type == "dlp"){
+        dlp = !dlp;
+        table.draw();
+    };
+
+    if(type == "all"){
+        dlp = false;
+        tenx = false;
+        table.draw();
+    };
+    all_button.className = (dlp||tenx) ? default_class : primary_class;
+    dlp_button.className = (dlp) ? primary_class : default_class;
+    tenx_button.className = (tenx) ? primary_class : default_class;
+}
+</script>
 {% endblock %}
