--- a/core/templates/core/tenx/tenxsequencing_list.html
+++ b/core/templates/core/tenx/tenxsequencing_list.html
@@ -48,3 +48,14 @@
 </div>
 
 {% endblock %}
+
+
+{% block datatables_script %}
+<script type="text/javascript">
+    $(document).ready(function() {
+        $("#datatable").DataTable({
+            "order": [[ 2, "desc" ]]
+        });
+    });
+</script>
+{% endblock %}
