--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -16,7 +16,7 @@
                     <td><a href="{% url 'core:sample_list' %}">Samples</a> <i class="counter">{{ sample_size }}</i></td>
                     <td>
                         <p style="float: right;">
-                            <a href="{% url 'core:sample_create' %}"><i class="fa fa-plus" aria-hidden="true" style="color: green;"></i> Add</a>
+                            <a href="{% url 'core:sample_create' %}"><i class="fa fa-home" aria-hidden="true" style="color: green;"></i> Add</a>
                         </p>
                     </td>
                 </tr>
@@ -31,6 +31,10 @@
                <tr>
                     <td><a href="{% url 'core:analysis_list' %}">Analyses</a> <i class="counter">{{ analysis_size }}</i></td><td></td>
                 </tr>
+            <tr>
+                <td></td>
+                <td ><a href="{% url 'core:gsc_submission_form' %}" style="float: right;"><i class="fa fa-download" ></i> GSC Form</a></td>
+            </tr>
             </tbody>
         </table>
     </div>
