--- a/core/templates/core/gsc_form.html
+++ b/core/templates/core/gsc_form.html
@@ -39,7 +39,6 @@
         >
           <b-card-text class="show-hide">
               <h3> GSC Submission Helper</h3>
-              Please Select the Libraries to create a list
           </b-card-text> 
         </b-card>      
         <b-card>
@@ -67,7 +66,7 @@
           <b-collapse id="collapse-2">  
           <b-container fluid class="inner-container" id="bottom-result">
               <b-card-text class="text-center" v-if="noLibrariesSelected"> 
-                Sorry, no libraries were selected.
+                No libraries were selected.
               </b-card-text>
             <b-table responsive hover small :items="results"></b-table>
           </b-container>        
@@ -83,8 +82,6 @@
           text-variant="white"
         >
           <b-container>
-            <b-button class="download-button show-hide" v-show="showCollapse"> Download CSV
-            </b-button>
             <b-button class="show-button show-hide" v-show="showCollapse" v-b-toggle.collapse-2 v-on:click="showSelectedData"> Show List </b-button>
             <b-button class="back-button show-hide" v-show="!showCollapse" v-b-toggle.collapse-2 v-on:click="showSelectedData"> Back </b-button>
           </b-container>
@@ -105,7 +102,7 @@
           results: [],
           selected_empty: true,
           libraries_selected: [],
-          error_msg: "Sorry, no libraries were selected.",
+          error_msg: "No libraries were selected.",
         },
         methods: {
 
