--- a/core/templates/core/gsc_form.html
+++ b/core/templates/core/gsc_form.html
@@ -167,8 +167,7 @@
             axios(
               {
                 method: 'post',
-                url: "http://127.0.0.1:8000/core/gsc_data",
-                // url: "https://colossus.canadacentral.cloudapp.azure.com/core/gsc_data",
+                url: "https://colossus.canadacentral.cloudapp.azure.com/core/gsc_data",
                 dataType: "json",
                 data: {
                   "selected" : selectedlist
@@ -225,7 +224,6 @@
     #gsc-form {
         padding-top: 4%;
         width: 800px;
-
     }
     
     #gsc-card {
