minor: order libraries in gsc form (#101)
* COLO-141: redirect sample and dlp library url (#95)

* feat: redirect sample urls

* feat: redirect library urls

* minor changes

* fe

* feFEF

* refactor

* add pics

* minor:

* gsc form prototype

* COLO-150: GSC form prototype (#98)

* COLO-141: redirect sample and dlp library url (#95)

* feat: redirect sample urls

* feat: redirect library urls

* minor changes

* :( 

* feFEF

* refactor

* add pics

* minor:

* gsc form prototype

* bugfix

* bugfix

* bugfix

* minor: order libraries in gsc form

* minor

--- a/core/templates/core/gsc_form.html
+++ b/core/templates/core/gsc_form.html
@@ -189,7 +189,7 @@
             search_results = this.all_libraries.filter(function (library) {
               return !library.userselect && library.text.toLowerCase().includes(filter.toLowerCase())
             })
-
+            search_results = search_results.sort((a, b) => (a.text > b.text) ? 1 : -1)
             return search_results
           },
 
@@ -199,6 +199,8 @@
               return library.userselect && library.text.toLowerCase().includes(filter.toLowerCase())
             })
 
+            search_results = search_results.sort((a, b) => (a.text > b.text) ? 1 : -1)
+            
             return search_results
           },
 
